<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="deeplink_settings">pt://settings</string>
    <string name="settings">Settings</string>
    <string name="player">Player</string>
    <string name="default_playback_speed">Default Playback Speed</string>
    <string name="_0_25x">0.25x</string>
    <string name="_0_50x">0.5x</string>
    <string name="_0_75x">0.75x</string>
    <string name="_1x">1.0x</string>
    <string name="_1_25x">1.25x</string>
    <string name="_1_50x">1.5x</string>
    <string name="_1_75x">1.75x</string>
    <string name="_2x">2.0x</string>
    <string name="default_speaker_volume">Default Speaker Volume</string>
    <string name="default_system_volume">Default System Volume</string>
    <string name="device_volume">Device Volume</string>
    <string name="default_screen_orientation">Default Screen Orientation</string>
    <string name="auto_detect">Auto Detect</string>
    <string name="landscape">Landscape</string>
    <string name="portrait">Portrait</string>
    <string name="subtitle">Subtitle</string>
    <string name="subtitle_font_size">Subtitle Font Size</string>
    <string name="subtitle_text_color">Subtitle Text Color</string>
    <string name="black">Black</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="yellow">Yellow</string>
    <string name="indigo">Indigo</string>
    <string name="green">Green</string>
    <string name="white">White</string>
    <string name="transparent">Transparent</string>
    <string name="subtitle_highlight_color">Subtitle Highlight Color</string>
</resources>